# cosmic-icon-and-title-app-tray

./: Cargo.toml  Makefile  README.md
.github/workflows/: packages.yml
res/: com.system76.CosmicAppletWindowList.desktop
src/: app_map.rs  config.rs  lib.rs  main.rs  styles.rs  wayland_handler.rs  wayland_subscription.rs
